--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -3,7 +3,6 @@
   max-width: 1440px;
   margin: 0 auto;
   width: 100%;
-  z-index: -2;
   margin-top: $header-height;
 
   @media (width < 500px) {
